--- a/.github/workflows/tagpr.yml
+++ b/.github/workflows/tagpr.yml
@@ -4,11 +4,10 @@ on:
   push:
     branches: ["main"]
 jobs:
-  deploy:
+  tagpr:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: Songmu/tagpr@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+    - uses: actions/checkout@v3
+    - uses: Songmu/tagpr@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
